kubernetes/frontend/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      imagePullSecrets:
        - name: docker-config-secret
      containers:
        - name: frontend
          image: "gitlab.praktikum-services.ru:5050/yuki.isoya23/momo-store/momo-frontend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.2"
              memory: 256Mi
            requests:
              cpu: "0.1"
              memory: 128Mi
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-cfg
