kubernetes/frontend/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: “nginx”
    cert-manager.io/cluster-issuer: “letsencrypt”
spec:
  tls:
    - hosts:
      - "mymomostore.space"
      secretName: letsencrypt
  rules:
    - host: "mymomostore.space"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
